# ros2_control_custom_hardware_interface

./: README.md
Arduino/Arduino/: arduino_firmware.txt
motor_controller/motor_controller/: CMakeLists.txt  motor_controller.xml  package.xml
motor_controller/motor_controller/config/: controllers.yaml
motor_controller/motor_controller/include/motor_controller/: arduino_interface.hpp
motor_controller/motor_controller/launch/: motor.launch.py
motor_controller/motor_controller/rviz/: display.rviz
motor_controller/motor_controller/src/: arduino_interface.cpp
motor_controller/motor_controller/urdf/: motor.urdf.xacro
